[gd_scene load_steps=7 format=3 uid="uid://blj5g47uwo7m0"]

[ext_resource type="Script" path="res://games/game3/scenes/main.gd" id="1_5g6v2"]
[ext_resource type="Texture2D" uid="uid://d38ceuoo614k4" path="res://games/game3/assets/bg.png" id="1_s2jh7"]
[ext_resource type="PackedScene" uid="uid://b6xt1pam4caki" path="res://games/game3/scenes/bird.tscn" id="3_4ap2d"]
[ext_resource type="PackedScene" uid="uid://d2ort7tfi33lg" path="res://games/game3/scenes/ground.tscn" id="4_kx1e6"]
[ext_resource type="PackedScene" uid="uid://u7tjn6f6rdwk" path="res://games/game3/scenes/HUD.tscn" id="6_bpfvk"]
[ext_resource type="PackedScene" uid="uid://snrvq7jkapgf" path="res://games/game3/scenes/game_over.tscn" id="6_yk7bg"]

[node name="Main" type="Node"]
script = ExtResource("1_5g6v2")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(2.29977, 1.55208)
texture = ExtResource("1_s2jh7")
offset = Vector2(432, 384)

[node name="Bird" parent="." instance=ExtResource("3_4ap2d")]

[node name="Ground" parent="." instance=ExtResource("4_kx1e6")]
position = Vector2(0, 897)
scale = Vector2(1.8, 1.8)

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 0.485

[node name="GameOver" parent="." instance=ExtResource("6_yk7bg")]
visible = false
z_index = 3
offset_right = 11.0
offset_bottom = 62.0

[node name="HUD" parent="." instance=ExtResource("6_bpfvk")]

[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
